force-app/main/default/objects/Program_Activities__c/Program_Activities__c.object-meta.xml
<CustomObject>
    <label>Program Activity</label>
    <nameField>
        <label>Program Activities Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>