force-app/main/default/objects/Program_Activities__c/fields/Activity_Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Activity_Site_Address__c</fullName>
    <label>Activity Site Address</label>
    <type>TextArea</type>
</CustomField>