force-app/main/default/objects/Program_Activities__c/fields/ActivityDescription__c.field-meta.xml
<CustomField>
    <fullName>ActivityDescription__c</fullName>
    <label>Activity Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>