force-app/main/default/objects/Program_Activities__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Program Activities</relationshipLabel>
    <relationshipName>Program_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>