force-app/main/default/objects/Program_Activities__c/fields/AsianandWhite__c.field-meta.xml
<CustomField>
    <fullName>AsianandWhite__c</fullName>
    <label>Asian and White</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>