force-app/main/default/objects/Program_Activities__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Program Activities</relationshipLabel>
    <relationshipName>Program_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>