force-app/main/default/objects/Program_Activities__c/fields/DateActivityComplete__c.field-meta.xml
<CustomField>
    <fullName>DateActivityComplete__c</fullName>
    <label>Date Activity Complete</label>
    <type>Date</type>
</CustomField>