force-app/main/default/objects/Program_Activities__c/fields/Has_Participants__c.field-meta.xml
<CustomField>
    <fullName>Has_Participants__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this activity when reported on, has participant records.  This allows for cloning prior reports participants for easier data entry on the report.</inlineHelpText>
    <label>Has Participants</label>
    <type>Checkbox</type>
</CustomField>