force-app/main/default/objects/Program_Activities__c/fields/MeasureableOutcomes__c.field-meta.xml
<CustomField>
    <fullName>MeasureableOutcomes__c</fullName>
    <label>Measureable Outcomes</label>
    <type>TextArea</type>
</CustomField>