force-app/main/default/objects/Program_Activities__c/fields/OtherMultiRacial__c.field-meta.xml
<CustomField>
    <fullName>OtherMultiRacial__c</fullName>
    <label>Other Multi Racial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>