force-app/main/default/objects/Program_Activities__c/fields/ReasonforNonAccomplishment__c.field-meta.xml
<CustomField>
    <fullName>ReasonforNonAccomplishment__c</fullName>
    <label>Reason for Non-Accomplishment</label>
    <type>TextArea</type>
</CustomField>