force-app/main/default/objects/Program_Activities__c/fields/ReportingPeriodActivityOccurs__c.field-meta.xml
<CustomField>
    <fullName>ReportingPeriodActivityOccurs__c</fullName>
    <label>Reporting Period Activity Occurs</label>
    <type>Date</type>
</CustomField>