force-app/main/default/objects/Program_Activities__c/fields/Required_Reporting_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Required_Reporting_Frequency__c</fullName>
    <inlineHelpText>How often does this activity need to be reported on.</inlineHelpText>
    <label>Required Reporting Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>As needed</fullName>
            </value>
            <value>
                <fullName>When requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>