force-app/main/default/objects/Program_Activities__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Acommplished</fullName>
            </value>
            <value>
                <fullName>Not Accomplished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>