force-app/main/default/objects/Program_Activities__c/fields/TaskCriteria__c.field-meta.xml
<CustomField>
    <fullName>TaskCriteria__c</fullName>
    <label>Task Criteria</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>