force-app/main/default/objects/Program_Activities__c/fields/Total_Amer_Indian_or_A_Nat_Blk_or__c.field-meta.xml
<CustomField>
    <fullName>Total_Amer_Indian_or_A_Nat_Blk_or__c</fullName>
    <inlineHelpText>American Indian or Alaska Native and Black or African American</inlineHelpText>
    <label>Total Amer Indian or AK Nat &amp; Blk or Afr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>