force-app/main/default/objects/Program_Activities__c/fields/Total_Hispanic__c.field-meta.xml
<CustomField>
    <fullName>Total_Hispanic__c</fullName>
    <inlineHelpText>Totals of Program Participation with program participants</inlineHelpText>
    <label>Total Hispanic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>