force-app/main/default/objects/Program_Activities__c/fields/TotalAmericanIndianOrAlasaNative__c.field-meta.xml
<CustomField>
    <fullName>TotalAmericanIndianOrAlasaNative__c</fullName>
    <label>Total American Indian or Alaska Native</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>