force-app/main/default/objects/Program_Activities__c/fields/TotalAmerIndianorAlaskaNat_White__c.field-meta.xml
<CustomField>
    <fullName>TotalAmerIndianorAlaskaNat_White__c</fullName>
    <inlineHelpText>Total American Indian or Alaska Native and white</inlineHelpText>
    <label>Total Amer Indian or Alaska Nat &amp; White</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>