force-app/main/default/objects/Program_Activities__c/fields/TotalAsian__c.field-meta.xml
<CustomField>
    <fullName>TotalAsian__c</fullName>
    <label>Total Asian</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>