force-app/main/default/objects/Program_Activities__c/fields/TotalBlackorAfricanAmerican__c.field-meta.xml
<CustomField>
    <fullName>TotalBlackorAfricanAmerican__c</fullName>
    <label>Total Black or African American</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>