force-app/main/default/objects/Program_Activities__c/fields/TotalBlackorAfricanAmericanWhite__c.field-meta.xml
<CustomField>
    <fullName>TotalBlackorAfricanAmericanWhite__c</fullName>
    <label>Total Black or African American &amp; White</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>