force-app/main/default/objects/Program_Activities__c/fields/TotalChoice__c.field-meta.xml
<CustomField>
    <fullName>TotalChoice__c</fullName>
    <label>Total Choice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>