force-app/main/default/objects/Program_Activities__c/fields/TotalExtremelyLow30AMI__c.field-meta.xml
<CustomField>
    <fullName>TotalExtremelyLow30AMI__c</fullName>
    <label>Total Extremely Low (30% AMI)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>