force-app/main/default/objects/Program_Activities__c/fields/TotalLow50AMI__c.field-meta.xml
<CustomField>
    <fullName>TotalLow50AMI__c</fullName>
    <label>Total Low (50% AMI)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>