force-app/main/default/objects/Program_Activities__c/fields/TotalModerate80AMI__c.field-meta.xml
<CustomField>
    <fullName>TotalModerate80AMI__c</fullName>
    <label>Total Moderate (80% AMI)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>