force-app/main/default/objects/Program_Activities__c/fields/TotalNativeHawaiianorPacificIslande__c.field-meta.xml
<CustomField>
    <fullName>TotalNativeHawaiianorPacificIslande__c</fullName>
    <label>Total Native Hawaiian or Pacific Islande</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>