force-app/main/default/objects/Program_Activities__c/fields/TotalNonHispanic__c.field-meta.xml
<CustomField>
    <fullName>TotalNonHispanic__c</fullName>
    <label>Total Non-Hispanic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>