force-app/main/default/objects/Program_Activities__c/fields/TotalNorth__c.field-meta.xml
<CustomField>
    <fullName>TotalNorth__c</fullName>
    <label>Total North</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>