force-app/main/default/objects/Program_Activities__c/fields/TotalNorthCentral__c.field-meta.xml
<CustomField>
    <fullName>TotalNorthCentral__c</fullName>
    <label>Total North Central</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>