force-app/main/default/objects/Program_Activities__c/fields/TotalNorthwest__c.field-meta.xml
<CustomField>
    <fullName>TotalNorthwest__c</fullName>
    <label>Total Northwest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>