force-app/main/default/objects/Program_Activities__c/fields/TotalProposedSoutheast__c.field-meta.xml
<CustomField>
    <fullName>TotalProposedSoutheast__c</fullName>
    <label>Total Proposed Southeast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>