force-app/main/default/objects/Program_Activities__c/fields/TotalWhite__c.field-meta.xml
<CustomField>
    <fullName>TotalWhite__c</fullName>
    <label>Total White</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>