force-app/main/default/objects/Program_Activities__c/fields/YTD_Total__c.field-meta.xml
<CustomField>
    <fullName>YTD_Total__c</fullName>
    <label>YTD Total</label>
    <summarizedField>ReportingDetail__c.This_Period_Total__c</summarizedField>
    <summaryForeignKey>ReportingDetail__c.ProgramActivity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>